--- a/assets/estilos/css/style.css
+++ b/assets/estilos/css/style.css
@@ -16,8 +16,8 @@
 }
 
 .card {
-  width: 33%;
-  height: 70%;
+  height: 380px;
+  max-width: 400px;
   background-color: hsl(213deg, 19%, 18%);
 }
 
@@ -28,14 +28,15 @@
 .card-text {
   font-size: 15px;
   color: hsl(216deg, 12%, 54%);
+  text-align: center;
 }
 
 .btns-circle {
   background-color: hsl(214deg, 18%, 25%) !important;
+  padding: 15px;
+  width: 100px;
   border: 0;
-  width: 50px;
   text-align: center;
-  height: 50px;
   border-radius: 50%;
   color: hsl(216deg, 15%, 74%);
   font-weight: 700;
@@ -88,6 +89,20 @@
   color: hsl(25deg, 97%, 53%);
   background-color: hsl(214deg, 18%, 25%);
   border-radius: 30px;
+}
+
+@media screen and (min-width: 0) and (max-width: 500px) {
+  .card {
+    max-width: 300px;
+  }
+  .rodape {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 501px) and (max-width: 1000px) {
+  .card {
+    width: auto;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
